display visited city using local storage and added cursor pointer

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     width: 100%;
 }
 
+.clickable-list {
+    cursor: pointer;
+}
+
 #navbar {
     background-color: lightgray;
     width: 300px;
