base css for buttons in navbar

--- a/style.css
+++ b/style.css
@@ -64,3 +64,5 @@ body {
 #visited-cities:hover {
     background-color: rgba(9, 53, 248, 0.349);
 }
+
+/* messed up a commit so just pushing an extra one lol */
