--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ body {
 #city-wrapper > ul > li {
     padding: 10px;
 }
+.clickable-list:hover {
+    background-color: rgba(231, 231, 231, 0.589);
+}
+
 
 #store-city{
     padding: 10px;
@@ -95,3 +99,6 @@ body {
     background-color: rgba(127, 250, 11, 0.925);
 }
 
+#store-city:hover{
+    background-color: rgba(114, 221, 14, 0.925);
+}
